cmake_minimum_required(VERSION 3.22)
project(AdvancedCPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdvancedCPP main.cpp Strings.h Strings.cpp Numbers.h Numbers.cpp UserInputs.h UserInputs.cpp Arrays.h Arrays.cpp Switches.h Switches.cpp Lists.h Lists.cpp Arrays2D.h Arrays2D.cpp Pointers.h Pointers.cpp)
