cmake_minimum_required(VERSION 3.22)
project(AdvancedCPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(AdvancedCPP main.cpp fundamentals/Strings.h fundamentals/Strings.cpp fundamentals/Numbers.h fundamentals/Numbers.cpp fundamentals/UserInputs.h fundamentals/UserInputs.cpp fundamentals/Arrays.h fundamentals/Arrays.cpp fundamentals/Switches.h fundamentals/Switches.cpp fundamentals/Lists.h fundamentals/Lists.cpp fundamentals/Arrays2D.h fundamentals/Arrays2D.cpp fundamentals/Pointers.h fundamentals/Pointers.cpp fundamentals/Classes.h fundamentals/Classes.cpp fundamentals/Inheritances.h fundamentals/Inheritances.cpp datastructures/Hashmap.h)
